# oatmeal

./: .gitignore  AGENTS.md  README.md  config.py  main.py  pyproject.toml  pytest.ini  run_tests.py
capturing/: __init__.py  audio_file.py  ffmpeg.py  two_channel.py
llm-docs/: enhanced-transcription-format.md
processing/: __init__.py  aligner.py  diarizer.py  multi_transcription_aligner.py  transcriber.py
run_strategies/: __init__.py  diarize_strategy.py  strategy.py  transcribe_only_strategy.py
tests/: README.md  test_backward_compatibility.py  test_config.py  test_enhanced_format_structure.py  test_multi_transcription_aligner.py  test_transcribe_only_strategy.py
