[project]
name = "oatmeal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.1",
    "jsonschema>=4.23.0",
    "librosa>=0.11.0",
    "numpy>=2.2.5",
    "pyannote-audio>=3.3.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "tqdm>=4.67.1",
    "transformers[accelerate,torch,vision]>=4.51.3",
]
